# FlowRun

./: .gitignore  Cargo.toml  README-zh.md  README.md  design_music_composer_v2.md  flow-run-design-zh.md  flow-run-design.md  flow-run-learning-report-zh.md  flow-run-learning-report.md  llm_stream.md  music_skills.md  suno_tag.md
docs/: agent-module-plan-gl.md  agent-module-plan-xm.md  flow-run-vs-langgraph-comparison-zh.md  flow-run-vs-langgraph-comparison.md  langgraph-multi-agent-orchestration.md  merge_plan_gl.md  merge_plan_xm.md
docs/plans/: 2026-03-29-lib-cli-separation.md  2026-04-09-per-step-tool-registration.md  2026-04-10-builtin-tool-extensibility.md  2026-04-19-from-step-resume.md  2026-04-25-review-loop-and-agent-session-reuse.md  2026-04-30-srt-to-speech-generation.md  human-in-the-loop.md
examples/: 01_basic_http.yaml  02_basic_shell.yaml  03_basic_dependencies.yaml  04_intermediate_parallel.yaml  05_intermediate_retry.yaml  06_intermediate_templates.yaml  07_advanced_loop.yaml  08_advanced_condition.yaml  09_advanced_subworkflow.yaml  10_advanced_approval.yaml  11_comprehensive_cicd.yaml  12_checkpoint_resume.yaml  13_agent_basic.yaml  14_agent_tool_mixed.yaml  15_tool_only.yaml  16_agent_deepseek.yaml  18_agent_stream.yaml  19_music_composer.yaml  20_builtin_tool_extensibility.yaml  21_supervisor_pattern.yaml  README.md  test
examples/code/: 01_load_workflow.rs  02_basic_shell.rs  02_execution_context.rs  03_dag_scheduler.rs  03_step_dependencies.rs  04_parallel_execution.rs  04_template_engine.rs  05_retry_engine.rs  05_retry_strategy.rs  06_checkpoint.rs  06_template_filters.rs  07_full_execution.rs  08_condition_branch.rs  09_subworkflow.rs  10_advanced_approval.rs  11_comprehensive_cicd.rs  12_checkpoint_resume.rs  13_agent_deepseek.rs  18_agent_stream.rs  19_music_composer.rs  20_builtin_tool_extensibility.rs  21_supervisor_pattern.rs  checkpoint_demo.rs  deepseek_stream.rs
examples/test/: compose_prompt_en.txt  compose_prompt_zh.txt  lyrics.txt  music_composer_result.md  result.md  summary.json  tagged_lyrics.md
examples/workflows/: build.yaml  deploy.yaml  test.yaml
src/: lib.rs  main.rs
src/agent/: builtin_registry.rs  error.rs  llm_adapter.rs  mod.rs  react_agent.rs  response_parser.rs  system_prompt.rs  tool_factory.rs  tool_implementations.rs  tool_registry.rs  types.rs  util.rs
src/cli/: commands.rs  output.rs
src/core/: context.rs  dag.rs  mod.rs  parser.rs  runner.rs  template.rs  types.rs
src/executors/: agent_executor.rs  approve.rs  condition.rs  http.rs  loop.rs  mod.rs  shell.rs  tool_executor.rs  workflow.rs
src/utils/: checkpoint.rs  error.rs  mod.rs  retry.rs  run_context.rs
