[package]
name = "flow-run"
version = "0.1.0"
edition = "2021"
description = "专为 AI Agent 设计的声明式工作流引擎"
license = "MIT"

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]

[dependencies]
# CLI 框架 (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 异步 trait 支持
async-trait = "0.1"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 正则表达式
regex = "1.10"

# UUID 生成
uuid = { version = "1.6", features = ["v4"] }

# 随机数生成
rand = "0.8"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# 速率限制
governor = "0.6"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 文件系统监控
notify = "6.1"

# Cron 表达式
cron = "0.12"

[dev-dependencies]
# 测试用
tempfile = "3.9"
wiremock = "0.5"
tokio-test = "0.4"

# 示例代码
[[example]]
name = "01_load_workflow"
path = "examples/code/01_load_workflow.rs"

[[example]]
name = "03_dag_scheduler"
path = "examples/code/03_dag_scheduler.rs"

[[example]]
name = "04_template_engine"
path = "examples/code/04_template_engine.rs"

[[example]]
name = "05_retry_engine"
path = "examples/code/05_retry_engine.rs"

[[example]]
name = "07_full_execution"
path = "examples/code/07_full_execution.rs"

[[example]]
name = "08_condition_branch"
path = "examples/code/08_condition_branch.rs"

[[example]]
name = "09_subworkflow"
path = "examples/code/09_subworkflow.rs"

[[example]]
name = "10_advanced_approval"
path = "examples/code/10_advanced_approval.rs"

[[example]]
name = "11_comprehensive_cicd"
path = "examples/code/11_comprehensive_cicd.rs"

[[example]]
name = "02_basic_shell"
path = "examples/code/02_basic_shell.rs"

[[example]]
name = "03_step_dependencies"
path = "examples/code/03_step_dependencies.rs"

[[example]]
name = "04_parallel_execution"
path = "examples/code/04_parallel_execution.rs"

[[example]]
name = "05_retry_strategy"
path = "examples/code/05_retry_strategy.rs"

[[example]]
name = "06_template_filters"
path = "examples/code/06_template_filters.rs"

[[example]]
name = "12_checkpoint_resume"
path = "examples/code/12_checkpoint_resume.rs"
